# beacon

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 22aeb56186fb_initial_schema.py
src/: config.py  main.py
src/analyzers/: __init__.py  assets.py  base.py  lighthouse.py  security.py  seo.py  tes.json
src/api/: schemas.py
src/api/routes/: __init__.py  health.py  scans.py
src/db/: models.py  repositories.py  session.py
src/recommendations/: __init__.py  engine.py  rules.py
src/worker/: __init__.py  celery_app.py  tasks.py
