[project]
name = "beacon"
version = "0.1.0"
description = "Website analysis engine for performance, SEO, security, and asset auditing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
		"psycopg2-binary>=2.9.9",
    
    # Job queue
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    
    # HTTP client & HTML parsing
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    
    # Browser automation (for Lighthouse)
    "playwright>=1.41.0",
    
    # Validation & settings
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    
    # SSL/Security
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beacon"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
